refactored code and add more functionality

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div id="mainContainer">
+        <button id="orientationBtn">Change Direction</button>
         <div id="playerGrid"></div>
         <div id="computerGrid"></div>
     </div>
