--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,11 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>BattleShip</h1>
     <div id="mainContainer">
         <button id="orientationBtn">Change Direction</button>
         <div id="playerGrid"></div>
+        <button id="startBtn">Start Game</button>
         <div id="computerGrid"></div>
     </div>
     <script src="../src/classes.js"></script>
