--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     <h1>BattleShip</h1>
+    <h2 id="placeShipHeader">Place your battleships</h2>
+    <div id="victoryCover"></div>
+    <h2 id="victoryMsg"></h2>
+    <button id="restartBtn">Restart Game</button>
     <div id="mainContainer">
         <button id="orientationBtn">Change Direction</button>
         <div id="playerGrid"></div>
