--- a/public/index.html
+++ b/public/index.html
@@ -8,18 +8,35 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>BattleShip</h1>
-    <h2 id="placeShipHeader">Place your battleships</h2>
+    <div id="musicContainer"><img id="musicMute" src="../assets/music-unmuted.png"></div>
+    <h1>JohnnyShip</h1>
+    <h2 id="placeShipHeader">Place your battleships!</h2>
     <div id="victoryCover"></div>
     <h2 id="victoryMsg"></h2>
     <button id="restartBtn">Restart Game</button>
     <div id="mainContainer">
-        <h2 id="shipCounter">Ships Remaining: 6</h2>
-        <button id="orientationBtn">Change Direction</button>
-        <div id="playerGrid"></div>
-        <button id="startBtn">Start Game</button>
-        <div id="computerGrid"></div>
+        <div id="gridContainerAll">
+            <div class="gridContainer">
+                <h2 class="gridName" id="playerName"></h2>
+                <div id="playerGrid"></div>
+            </div>
+            <div id="vsP">VS</div>
+            <div id="computerGridContainer" class="gridContainer">
+                <h2 class="gridName" id="computerName">Computer</h2>
+                <div id="computerGrid"></div>
+            </div>
+        </div>
+        <div id="btnContainer">
+            <h2 id="shipCounter">Ships Remaining: 6</h2>
+            <button id="orientationBtn">Change Direction</button>
+            <input id="nameBox" type="text" placeholder="Enter Name">
+            <button id="startBtn">Start Game</button>
+        </div>
     </div>
+    <audio id="backgroundMusic" autoplay loop controls>
+        <source src="../assets/backgroundMusic.mp3" ></source>
+    </audio>
+    <audio id="cannonAudio" src="" autoplay></audio>
     <script src="../src/classes.js"></script>
     <script src="../src/index.js"></script>
 </body>
