--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="musicContainer"><img id="musicMute" src="../assets/music-unmuted.png"></div>
+    <div id="musicContainer"><p>Sound</p><img id="musicMute" src="../assets/music-muted.png"></div>
     <h1>JohnnyShip</h1>
     <h2 id="placeShipHeader">Place your battleships!</h2>
     <div id="victoryCover"></div>
@@ -37,6 +37,9 @@
         <source src="../assets/backgroundMusic.mp3" ></source>
     </audio>
     <audio id="cannonAudio" src="" autoplay></audio>
+
+
+    <footer></footer>
     <script src="../src/classes.js"></script>
     <script src="../src/index.js"></script>
 </body>
