--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
             </div>
             <div id="vsP">VS</div>
             <div id="computerGridContainer" class="gridContainer">
-                <h2 class="gridName" id="computerName">Computer</h2>
+                <h2 class="gridName" id="computerName">BattleBot</h2>
                 <div id="computerGrid"></div>
             </div>
         </div>
